<resources>
    <string name="app_name">Talo</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string name="init_count">0</string>

    <string name="status">Status</string>
    <string name="user">User</string>
    <string name="time">Time</string>
    <string name="views">views</string>

    <string name="name">Name</string>

    <string name="facebook_app_id">1131735883527080</string>
    <string name="require_login_home">Login to use social and download</string>
    <string name="require_login_love">Login to use love album</string>
    <string name="no_photo_is_loved">No photo is loved</string>

    <string name="login_fail">Login fail. please try again</string>

    <string name="network_info">Network Info</string>
    <string name="network_connect_no">Unable access internet, please check internet connection</string>
    <string name="network_connect_yes">Internet is connected</string>

    <string name="banner_ad_unit_id">ca-app-pub-8284127915682026/7328378938</string>

    <string name="home">Home</string>
    <string name="love">Love</string>
    <string name="upload">Upload</string>
    <string name="me">Me</string>
    <string name="logout">Logout</string>

    <string name="publish">Publish</string>
    <string name="review">Review</string>

    <string name="hint_photo_description">Description for this photo...</string>
</resources>
