<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/photo_item_view_margin_top"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_item_view_header_height"
        android:padding="@dimen/photo_item_view_header_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_item_review_user_header_image_avatar"
            android:layout_width="@dimen/photo_item_view_header_height"
            android:layout_height="@dimen/photo_item_view_header_height"
            android:src="@drawable/ic_bar_me" />

        <TextView
            android:id="@+id/photo_item_review_user_header_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/photo_item_review_user_header_image_avatar"
            android:paddingBottom="2dp"
            android:paddingTop="@dimen/photo_item_view_text_user_padding"
            android:text="@string/user"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/photo_item_review_user_header_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo_item_review_user_header_text_name"
            android:layout_marginBottom="@dimen/photo_item_view_header_item_padding"
            android:layout_toRightOf="@+id/photo_item_review_user_header_image_avatar"
            android:text="@string/time"
            android:textSize="@dimen/photo_item_view_text_detail_padding" />

        <ImageView
            android:id="@+id/photo_item_review_user_header_image_remove"
            android:layout_width="@dimen/photo_item_view_header_height"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="@dimen/photo_item_view_image_love_padding"
            android:src="@drawable/ic_header_remove" />

    </RelativeLayout>

    <TextView
        android:id="@+id/photo_item_review_user_body_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/photo_item_view_body_title_padding"
        android:text="@string/status" />

    <ImageView
        android:id="@+id/photo_item_review_user_body_image_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_body_load" />

    <TextView
        android:id="@+id/photo_item_review_user_body_text_feedback"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:hint="@string/hint_photo_review_feedback"
        android:padding="@dimen/photo_item_view_body_title_padding" />


</LinearLayout>